[tool.poetry]
name = "garage-door"
version = "0.1.0"
description = ""
authors = ["Henry Singleton <henrt@henrysingleton.com>"]
readme = "README.md"
packages = [{include = "garage_door"}]

[tool.poetry.dependencies]
python = "^3.9"
gpiozero = "^1.6.2"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.990"
types-requests = "^2.28.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

